--- a/android/ShootingGameFinal/app/build.gradle
+++ b/android/ShootingGameFinal/app/build.gradle
@@ -36,4 +36,9 @@ dependencies {
     androidTestImplementation 'com.android.support:support-annotations:23.4.0'
     // Optional -- Hamcrest library
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+
+    def appCenterSdkVersion = '1.4.0'
+    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
+    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
+
 }
