edX React-Native project 2 updates for build:android

--- a/react/edX/HarvardXMobileAppDev/project2/app.json
+++ b/react/edX/HarvardXMobileAppDev/project2/app.json
@@ -15,7 +15,11 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.dustmybroom62.project2"
+    },
+    "android": {
+      "package": "com.dustmybroom62.project2"
     }
   }
 }
