--- a/CrosswordSolver/CrosswordSolver.csproj
+++ b/CrosswordSolver/CrosswordSolver.csproj
@@ -19,4 +19,8 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AlgorithmAnalysis\Algorithms.csproj" />
+  </ItemGroup>
+
 </Project>
